[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=1]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Overlap/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=5]
[ext_resource path="res://Util/Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/EnemyTemplate.gd" type="Script" id=7]

[node name="EnemyTemplate" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]

[node name="HitBox" parent="." instance=ExtResource( 3 )]

[node name="Sounds" type="YSort" parent="."]

[node name="PlayerDetected" type="AudioStreamPlayer2D" parent="Sounds"]

[node name="PlayerLost" type="AudioStreamPlayer2D" parent="Sounds"]

[node name="SoftCollision" parent="." instance=ExtResource( 4 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 1 )]

[node name="WanderController" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Health" parent="." instance=ExtResource( 6 )]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true
